# files-clean-up

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-openenv.txt
safe_cleanup_env/: __init__.py  baseline.py  cli.py  client.py  environment.py  grader.py  models.py  sample_data.py
safe_cleanup_env/server/: Dockerfile  __init__.py  app.py  environment.py
server/: __init__.py  app.py  environment.py
tests/: test_env.py
